# cpp-conan-template

./: .gitignore  .project  CMakeLists.txt  CMakeLists.txt.backup  README.md  conanfile.py  conanfile.py.backup  conanfile.txt  configure  make  mingw_profile
scripts/: configure_cmake.sh  configure_conan.sh  configure_gcc.sh  configure_visual_studio_code.sh  constants.sh  cpp_standard.sh  cpp_standard_utility.sh  make_cpp.sh
source/: main.cpp
source/cpp/math/: expandingPolygon.h
src/: app.cpp  app.hpp  main.cpp
